[Mac DomCode] Swap 'IntlBackslash' and 'Backquote' on ISO keyboard

According to spec the key to the left of Digit1 should produce DomCode
'Backquote', and the key between ShiftLeft and KeyZ should produce
DomCode 'IntlBackslash'.

The current issues are:
1. On Mac the |keyCode| were swapped on Apple's 102 French keyboard
and PC ISO 102 French keyboard.

2. On Linux and Windows the DomCode were swapped on Apple's 102 French
keyboard.

It sounds like Apple wired their keyboards with the keys swapped, so
we will fix issue 1 on Mac side by swapping these two keys back.

However we could not find a way to detect Apple's keyboard on Linux
and Windows, so we will leave the issue assuming it's rare to use an
Apple's keyboard on PC. (https://crbug.com.608493)

SPEC=https://w3c.github.io/uievents-code/#keyboard-102
BUG=600607
TEST=https://cdn.rawgit.com/w3c/uievents/gh-pages/tests/key-mtest-102fr-fr.html

Review-Url: https://codereview.chromium.org/1943553002
Cr-Commit-Position: refs/heads/master@{#392970}

Former-commit-id: ba1eb3a80a5fe90b236518a3005f0b6cbde8de00